# Realtime-Meeting-Speech-To-Text-AI-Summary-Recorder

./: .gitignore  Cargo.toml  Packager.toml  README.md  build.rs  settings.example.json
.github/workflows/: release.yml
packaging/nsis/: installer.nsi
src/: logger.rs  main.rs
src/app/: auto_save.rs  credentials.rs  devices.rs  messages.rs  mod.rs  options.rs  panels.rs  storage.rs  views.rs  workflow.rs
src/app/ui/: mod.rs  style.rs  widgets.rs
src/audio/: analysis.rs  mod.rs  recorder.rs  wasapi_loopback.rs
src/services/: assemblyai.rs  credentials.rs  deepgram.rs  groq.rs  mod.rs  summary.rs
