[package]
name = "rms-ai-recorder"
version = "0.1.0"
edition = "2021"
default-run = "rms-ai-recorder"

[dependencies]
tokio = { version = "1", features = ["fs", "full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7.18"
hound = "3.5.1"
ico = "0.5.0"
eframe = "0.27"
egui = "0.27"
crossbeam-channel = "0.5"
directories = "5"
wasapi = "0.23.0"

[build-dependencies]
winresource = "0.1"
